fix: prevent accidental scrollbar triggering when resizing windows on Linux

--- a/src/assets/styles/layout.scss
+++ b/src/assets/styles/layout.scss
@@ -103,6 +103,7 @@
         left: 0;
         right: 1px;
         bottom: 0px;
+        padding-right: 3px;
       }
     }
   }
